fixed elements not showing properly when using tablet-sized resolutions. Added animations

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,16 @@ header {
   padding: 1.5% 10%;
   letter-spacing: 1rem;
   justify-content: space-evenly;
-  align-items: center; }
+  align-items: center;
+  animation-name: appear;
+  animation-duration: 2s;
+  animation-iteration-count: 1; }
+
+@keyframes appear {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 
 .hero-background .page-message {
   position: relative; }
@@ -119,6 +128,20 @@ header {
   position: relative;
   margin: 0 auto;
   height: 34rem; }
+
+#slide-1,
+#slide-2,
+#slide-3,
+#slide-4,
+#slide-5 {
+  transition: transform 0.3s ease; }
+
+#slide-1:hover,
+#slide-2:hover,
+#slide-3:hover,
+#slide-4:hover,
+#slide-5:hover {
+  transform: translate(0, -20px); }
 
 footer {
   background-color: #171717;
