--- a/scss/home.scss
+++ b/scss/home.scss
@@ -49,7 +49,20 @@ $red: crimson;
     letter-spacing: 1rem;
     justify-content: space-evenly;
     align-items: center;
+    animation-name: appear;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
 }
+
+@keyframes appear {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 
 .hero-background {
     .page-message{
@@ -106,4 +119,20 @@ $red: crimson;
     position: relative;
     margin: 0 auto;
     height: 34rem;
+}
+
+#slide-1,
+#slide-2,
+#slide-3,
+#slide-4,
+#slide-5 {
+    transition: transform 0.3s ease;
+}
+
+#slide-1:hover,
+#slide-2:hover,
+#slide-3:hover,
+#slide-4:hover,
+#slide-5:hover {
+    transform: translate(0, -20px);
 }
